Wed Oct 16 17:45:13 2013  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/runner.rb: check nil before calling `signal?'
	  for a process status.

Wed Oct 16 17:37:17 2013  Koichi Sasada  <ko1@atdot.net>

	* error.c, internal.h (rb_bug_reporter_add): add a new C-API.
	  rb_bug_reporter_add() allows to register a function which
	  is called at rb_bug() called.

	* ext/-test-/bug_reporter/bug_reporter.c: add a test for this C-API.

	* ext/-test-/bug_reporter/extconf.rb: ditto.

	* test/-ext-/bug_reporter/test_bug_reporter.rb: ditto.

Wed Oct 16 15:14:21 2013  Koichi Sasada  <ko1@atdot.net>

	* NEWS: add a line into NEWS for last commit.

Wed Oct 16 15:09:14 2013  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/objspace.c: add a new method `reachable_objects_from_root'.
	  ObjectSpace.reachable_objects_from_root returns all objects refered
	  from root (called "root objects").
	  This feature is for deep object analysis.

	* test/objspace/test_objspace.rb: add a test.

Wed Oct 16 15:00:21 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master b955554.  Changes:

	  Fixed NameError for Gem::Ext due to re-entering file lookup in
	  RubyGems' overridden require.  Bug by Koichi Sasada.

	  Fixed possible circular require warning in tests.

	  Used existing constant for `gem install -g` dependecy file list.

	* test/rubygems:  ditto.

Wed Oct 16 09:42:42 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master 278d00d.  Changes:

	  Fixes building extensions without a "clean" make rule

	  Adds gem dependency file autodetection to "gem install -g"

	* test/rubygems:  Tests for the above.

Wed Oct 16 09:12:23 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master commit 2a74263.  This fixes
	  several bugs in RubyGems 2.2.0.preview.1.

	* test/rubygems:  ditto.

Wed Oct 16 07:25:02 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c (gc_mark_roots): rename roots to be categories